phone frame overlap fix 2

--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ footer span{
 /*phone styles*/
 @media only screen and (max-width: 650px) { 
     html{
-        scroll-padding-top: 5rem;
+        scroll-padding-top: 6rem;
     }
     body{
         padding: 0;
